--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,10 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            //Aumenta tiempo de compilación
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     dataBinding {
